<resources>
    <string name="app_name">D-BIUM Semarang</string>
    <string name="judul_app">Digital Biro Umum Semarang"</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="sign_up">DAFTAR</string>
    <string name="daftar">Belum punya akun? Daftar Sekarang!</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="info_resetPassword">Silahkan masukkan E-mail akun Anda untuk menerima E-mail Reset Password.</string>
    <string name="remember_password">Saya ingat password saya.</string>
    <string name="have_account">Saya sudah punya akun.</string>
    <string name="create_account">Buat Akun</string>
    <string name="cancel">Batal</string>
    <string name="message">\"Pesan Gedung dan Venue Lebih Mudah\"</string>
    <string name="loading">Memproses&#8230;</string>
    <string name="dialog_exitTitle">Keluar</string>
    <string name="dialog_logOut">Apakah Anda yakin ingin keluar akun?</string>
    <string name="dialog_yes">Ya</string>
    <string name="dialog_no">Tidak</string>
    <string name="success">Sukses</string>
    <string name="free">GRATIS</string>
    <string name="hour">%1$s /jam</string>
    <string name="hasnt_input">Belum Diisi</string>
    <string name="account">Berhasil membuat akun.Silahkan lengkapi data diri dan verifikasi E-mail Anda setelah login.</string>
    <string name="has_alreadyRent">Anda masih memiliki jadwal sewa yang aktif untuk %1$s ini</string>
    <string name="loginDaftar_empty">Email/Password masih kosong</string>
    <string name="login_invalid">Email/Password tidak valid</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="error">Error tidak diketahui</string>
    <string name="login_cancel">Dibatalkan</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_empty">Email masih kosong</string>
    <string name="already_registered">Email sudah terdaftar</string>
    <string name="password_weak">Minimal password 6 karakter</string>
    <string name="password_weakV2">Minimal password baru 6 karakter</string>
    <string name="authentication">Mengotentifikasi&#8230;</string>
    <string name="authentication_fail">Gagal mengotentifikasi </string>
    <string name="information">Informasi</string>
    <string name="mistake">Terjadi kesalahan.Silahkan coba login kembali.</string>
    <string name="login_double">Sesi habis silahkan coba login kembali.</string>
    <string name="no_identity">Data akun Anda tidak ditemukan.Silahkan coba login kembali/hubungi Super Admin.</string>
    <string name="profile">Profil Anda</string>
    <string name="search">Cari</string>
    <string name="check_connection">Periksa Koneksi Internet Anda</string>
    <string name="no_result">Tidak ada %1$s  yang tersedia</string>
    <string name="not_found">%1$s tidak ditemukan</string>
    <string name="try_again">Coba Lagi</string>
    <string name="fail_fetchData">Gagal mengambil data dari Server</string>
    <string name="gedung">Gedung</string>
    <string name="venue">Venue</string>
    <string name="info">Info %1$s</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="verifikasi_v2">Verifikasi %1$s</string>
    <string name="verifikasi_desc">Notifikasi untuk perubahan status sewa Anda</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="contact">Kontak Admin</string>
    <string name="like">Suka</string>
    <string name="contact_person">Hubungi</string>
    <string name="map">Lokasi</string>
    <string name="map_google">Maps</string>
    <string name="street_google">Street View</string>
    <string name="map_title">Lokasi %1$s</string>
    <string name="rent">Sewa</string>
    <string name="rent_desc">Notifikasi untuk informasi data sewa Anda</string>
    <string name="rent_v2">Sewa %1$s</string>
    <string name="schedule">Jadwal</string>
    <string name="no_information">Tidak ada informasi.</string>
    <string name="no_hp">%1$s - %2$s</string>
    <string name="like_this">Anda menyukai %1$s ini</string>
    <string name="dislike_this">Anda batal menyukai %1$s ini</string>
    <string name="no_contact">Belum ada kontak</string>
    <string name="email_resetSuccess">Email reset password Anda akan dikirim dalam waktu 10&#8211;15 menit.</string>
    <string name="name">Nama %1$s</string>
    <string name="address">Alamat</string>
    <string name="cost">Biaya</string>
    <string name="all_cost">Pembayaran</string>
    <string name="maintenance">Maintenance</string>
    <string name="info_maintenance">Mohon maaf sedang dilakukan perbaikan server.Silahkan coba dalam %1$s lagi.</string>
    <string name="quick_mt">beberapa saat</string>
    <string name="minutes_mt">%1$d menit</string>
    <string name="hour_mt">%1$d jam</string>
    <string name="see">Lihat</string>
    <string name="title_time1">Waktu Pinjam</string>
    <string name="title_time2">Waktu Kembali</string>
    <string name="date">Tanggal</string>
    <string name="pick_date">Pilih Tanggal</string>
    <string name="time">Jam</string>
    <string name="e_banking">E-Banking</string>
    <string name="pick_time">Pilih Jam</string>
    <string name="duration">Lama pinjam</string>
    <string name="total">Total biaya</string>
    <string name="count_cost">Hitung Biaya</string>
    <string name="time_notComplete">Mohon pilih waktu pinjam dan waktu kembali</string>
    <string name="time_invalid">Waktu pinjam dan waktu kembali tidak valid</string>
    <string name="rent_range">%1$d hari %2$d jam</string>
    <string name="schedule_tipe">Jadwal %1$s</string>
    <string name="no_schedule">Tidak ada jadwal untuk %1$s ini</string>
    <string name="sure_rent">Apakah Anda yakin ingin menyewa %1$s?\nLama pinjam : %2$s\nTotal biaya : %3$s</string>
    <string name="fail_process">Gagal memproses.Silahkan coba lagi</string>
    <string name="collison">Waktu sewa %1$s Anda bersamaan dengan waktu sewa user yang lain.Silahkan coba lagi / ubah waktu sewa anda.</string>
    <string name="email_verif">Kirim Saya Email Verifikasi</string>
    <string name="email_verifTitle">Email Verifikasi</string>
    <string name="email_verifContent">Apakah Anda ingin meminta email untuk verifikasi?</string>
    <string name="email_verifFail">Gagal mengirim email</string>
    <string name="email_verifSuccess">Email verifikasi Anda akan dikirim dalam waktu 10&#8211;15 menit</string>
    <string name="fill_profile">Mohon lengkapi data diri Anda pada menu Profil sebelum menyewa %1$s ini. </string>
    <string name="send_emailVerif">Mohon verifikasi email Anda sebelum menyewa %1$s ini.Email verifikasi dapat diminta pada menu Profil.</string>
    <string name="notification_new">Anda mendapat notifikasi baru</string>
    <string name="notificaiton_success">Anda berhasil menyewa %1$s  %2$s dengan waktu sewa (%3$s - %4$s)</string>
    <string name="notification_fail">Anda gagal menyewa %1$s  %2$s dengan waktu sewa (%3$s - %4$s) dikarenakan bersamaan dengan waktu sewa user lain </string>
    <string name="success_title">Sukses %1$s</string>
    <string name="fail_title">Gagal %1$s</string>
    <string name="fail_titleV2">Gagal</string>
    <string name="no_bank">Untuk sementara tidak ada Bank yang tersedia</string>
    <string name="history">Riwayat</string>
    <string name="history_v2">Riwayat %1$s</string>
    <string name="history_v3">Nama %1$s (Riwayat)</string>
    <string name="verification">Verifikasi %1$s</string>
    <string name="info_search">Pencarian menampilkan 50 hasil teratas berdasarkan kata kunci\n</string>
    <string name="no_history">Anda tidak memiliki riwayat sewa %1$s</string>
    <string name="detail">detail</string>
    <string name="status">Status : %1$s</string>
    <string name="status_v2">Status :</string>
    <string name="status_v3">Status</string>
    <string name="detail_rent">Detail Sewa %1$s</string>
    <string name="barcode">Barcode Sewa (Rahasia)</string>
    <string name="data_rent">Data Sewa %1$s</string>
    <string name="delete">Hapus</string>
    <string name="explanation">Keterangan</string>
    <string name="success_verification">Terverifikasi</string>
    <string name="success_verificationContent">Data sewa Anda untuk %1$s %2$s telah diverifikasi oleh Admin</string>
    <string name="fail_verification">Ditolak</string>
    <string name="fail_verificationContent">Data sewa Anda untuk %1$s %2$s telah ditolak oleh Admin</string>
    <string name="success_cancel">Data sewa Anda untuk %1$s ini telah dibatalkan</string>
    <string name="cancel_rent">Batal Sewa</string>
    <string name="cant_cancel">Data sewa Anda telah %1$s  sehingga tidak dapat dihapus</string>
    <string name="sure_cancel">Apakah Anda yakin ingin membatalkan sewa %1$s ini?</string>
    <string name="no_explanation">Tidak ada keterangan</string>
    <string name="name_v2">Nama</string>
    <string name="phone">Nomor Telepon Seluler</string>
    <string name="change_password">Ganti Password</string>
    <string name="change_name">Ganti Nama</string>
    <string name="change_phone">Ganti Nomor</string>
    <string name="number">Nomor</string>
    <string name="change_photo">Unggah Foto %1$s</string>
    <string name="change_photoV2">Unggah Foto Baru</string>
    <string name="change_photoSure">Apakah Anda yakin ingin mengunggah Foto %1$s yang baru?</string>
    <string name="log_out">Keluar</string>
    <string name="foto_ready">Sudah Ada</string>
    <string name="still_empty">%1$s masih kosong</string>
    <string name="number_invalid">Nomor tidak valid</string>
    <string name="password_empty">Password masih ada yang kosong</string>
    <string name="old_passwordInvalid">Password lama tidak valid</string>
    <string name="foto_notReady">Belum Ada</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="ktp_only">Foto %1$s</string>
    <string name="ktp_self">Foto KTP Bersama Diri Sendiri </string>
    <string name="no_photo">Belum ada Foto %1$s</string>
    <string name="choose_photo">Pilih Foto</string>
    <string name="fail_upload">Gagal mengunggah Foto %1$s</string>
    <string name="upload_empty">Pilih Foto %1$s untuk diunggah</string>
    <string name="KTP">KTP</string>
    <string name="KTP_self">KTP Diri</string>
    <string name="search_title">Cari %1$s</string>
    <string name="no_link">E-Banking tidak tersedia untuk Bank ini</string>
    <string name="no_browser">Tidak ada browser tersedia</string>
    <string name="search_historyNotFound">Riwayat %1$s tidak ditemukan</string>
    <string name="search_historyMessage">Hasil Pencarian Riwayat %1$s akan muncul di sini</string>
    <string name="search_infMessage">Hasil Pencarian %1$s akan muncul di sini</string>
    <string name="ktp_info">Unggahan foto baru terkadang memerlukan waktu beberapa menit untuk dapat tampil dalam profil Foto KTP Anda</string>
    <string name="ktp_info2">Ukuran foto maksimal 1MB dan harap mengunggah foto dengan jelas dan benar karena akan divalidasi oleh Admin</string>
    <string name="fail_processV2">Gagal memproses.Silahkan coba lagi/memuat ulang riwayat sewa  %1$s Anda</string>
    <string name="info_barcode">Barcode Sewa akan ditampilkan setelah data sewa diverifikasi dan jangan bagikan barcode  kepada siapa pun.</string>
    <string name="atas_bank">Atas Nama : %1$s</string>
    <string name="rek_bank">No Rekening : %1$s</string>
    <string name="dialog_bank">No Rekening : %1$s\nAtas Nama : %2$s</string>
    <string name="no_contactV2">Belum ada kontak Admin yang tersedia</string>
    <string name="call_admin">Segera hubungi admin setelah melakukan pembayaran untuk diverifikasi</string>
</resources>
