<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/search"
        android:id="@+id/search"
        android:icon="@drawable/search"
        app:showAsAction="always" />
    <item android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/pay"
        android:title="@string/all_cost"
        app:showAsAction="never"/>
    <item android:id="@+id/contact"
        android:title="@string/contact"
        app:showAsAction="never"/>
    <item android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>