<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.example.asus.d_biumsemarang1.utils.ClearableEditText
            android:id="@+id/mEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@color/colorWhite"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/colorLogin"
            android:textColorHint="@color/colorHint"
            android:textCursorDrawable="@null"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <com.example.asus.d_biumsemarang1.utils.ClearableEditText
                android:id="@+id/mEditPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/colorLogin"
                android:textColorHint="@color/colorHint"
                android:textCursorDrawable="@null"
                android:textSize="20sp" />
            <ImageView
                android:id="@+id/mImgPassword"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/visible_on" />
        </LinearLayout>

        <Button
            android:id="@+id/mBtnDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@color/colorPrimaryDark"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/create_account"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mTextIngat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/have_account"
            android:textAlignment="center"
            android:textColor="@color/daftar_dan_lupa"
            android:textSize="16sp" />


    </LinearLayout>

</ScrollView>
