<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/mToolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:popupTheme="@style/Theme.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>
    
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBgMain"
                android:textColor="@android:color/black"
                android:text="@string/ktp_info"
                android:padding="16dp"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBgMain"
                android:textColor="@android:color/black"
                android:text="@string/ktp_info2"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:textSize="14sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/stroke_v2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:id="@+id/mJudulKTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/ktp_only"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:layout_marginBottom="8dp"
                    android:padding="4dp">
                    <ImageView
                        android:id="@+id/mImgKtp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <ProgressBar
                        android:id="@+id/mProgress"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:id="@+id/mNoPhoto"
                        android:layout_gravity="center"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </FrameLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/mImgKtpUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:scaleType="fitXY"
                        android:background="@color/colorBgMain" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/mBtnPilih"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/choose_photo"
                            android:textColor="@color/colorWhite"
                            android:layout_marginBottom="8dp"
                            android:foreground="?attr/selectableItemBackground"
                            android:padding="8dp"
                            android:background="@color/colorPrimaryDark"/>
                        <Button
                            android:id="@+id/mBtnUpload"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/change_photoV2"
                            android:textColor="@color/colorWhite"
                            android:foreground="?attr/selectableItemBackground"
                            android:padding="8dp"
                            android:background="@color/colorPrimaryDark"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/stroke_v2" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
