<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/mToolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:popupTheme="@style/Theme.AppCompat.Light"
            app:title="@string/all_cost" />
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/colorBgMain">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/mRecycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp" />

        <ProgressBar
            android:id="@+id/mProgress1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/mConnectionLinear1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">
            <ImageView
                android:id="@+id/mImage1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="fitXY"
                android:src="@drawable/no_signal" />
            <TextView
                android:id="@+id/mKeterangan1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                tools:text="@string/check_connection" />
            <Button
                android:id="@+id/mBtnCoba1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/try_again"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </FrameLayout>
    <ImageView
        android:id="@+id/mImgTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:src="@drawable/top_arrow"
        android:layout_gravity="bottom|end"
        android:background="@color/colorTouchText"/>
</android.support.design.widget.CoordinatorLayout>
